cdebconf (0.133) UNRELEASED; urgency=low

  * Additional tuning of the dark theme in the newt frontend. Patch from
    Samuel Thibault.

 -- Frans Pop <fjp@debian.org>  Fri, 18 Jul 2008 08:03:07 +0200

cdebconf (0.132) unstable; urgency=low

  [ Joey Hess ]
  * Add a separate queue for noninteractive questions, so that things can
    be done when these questions would be displayed. This is a bit hackish;
    debconf's method of letting questions determine if they are interactive or
    not is really better. But this doesn't need huge changes to cdebconf.
  * Handle the special case of a noninteractive select with no (or a bad)
    default the same as debconf does; when such a question is asked,
    set the value to the first item in the select list. 
    Closes: #486892, #247744

  [ Frans Pop ]
  * Apply patch from Samuel Thibault to improve dark theme in newt frontend
    and add support for a dark theme in the text frontend if used with
    "linux" or "bterm" consoles. Closes: #488494.

  [ Updated translations ]
  * Basque (eu.po) by Iñaki Larrañaga Murgoitio
  * Italian (it.po) by Milo Casagrande
  * Russian (ru.po) by Yuri Kozlov
  * Turkish (tr.po) by Mert Dirik

 -- Frans Pop <fjp@debian.org>  Wed, 16 Jul 2008 13:34:27 +0200

cdebconf (0.131) unstable; urgency=low

  [ Frans Pop ]
  * gtk frontend: remove special handling for countrychooser/country-name as
    that template no longer exists. Requires: localechooser (>= 2.02).

  [ Max Vozeler ]
  * Fix *_can_align() function signatures to match the prototype.
  * Adapt ncurses, slang and bogl frontends to API changes made in 
    cdebconf 0.129 - q_get_*() and question_get_value().

  [ Jérémy Bobbio ]
  * In the GTK+ frontend, the "Go Back" button is now created before calling
    question handlers.  This allow the button ordering to stay coherent when
    plugins define custom buttons.

  [ Updated translations ]
  * Malayalam (ml.po) by Praveen|പ്രവീണ്‍ A|എ
  * Marathi (mr.po) by Sampada