@@ -1,7 +1,13 @@
 cdebconf (0.133) UNRELEASED; urgency=low
 
+  [ Frans Pop ]
   * Additional tuning of the dark theme in the newt frontend. Patch from
     Samuel Thibault.
+
+  [ Jérémy Bobbio ]
+  * Switch to GtkEntry instead of GtkLabel to display progress info underneath
+    the progress bar.  The later has issue when displaying combined LTR and
+    RTL scripts.  (Closes: #409412)
 
  -- Frans Pop <fjp@debian.org>  Fri, 18 Jul 2008 08:03:07 +0200
 
